modifiquei mta coisa preguiça de escrever commit

--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -84,3 +84,15 @@
         }
     }
 }
+
+.app__header-container {
+    display: flex;
+    justify-content: space-around; /* Distribui o espaço ao redor dos itens */
+    align-items: center; /* Alinha verticalmente os itens ao centro */
+}
+
+.app__header-buttons {
+    display: flex;
+    gap: 16px;  /* Espaçamento entre os botões */
+    align-items: center;
+}
